--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "fs": "^0.0.1-security",
-    "venom-bot": "^4.3.7"
+    "puppeteer": "^23.4.0",
+    "sharp": "^0.33.5",
+    "venom-bot": "^5.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^3.1.5"
   },
   "author": "",
   "license": "ISC"
